manifests/admin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: admin-deployment
  name: admin
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: admin-deployment
  type: NodePort
status:
  loadBalancer: {}
